[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/SetupView.gd" id="1_setup"]

[node name="SetupView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_setup")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "新弟子登録"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="LabelName" type="Label" parent="Panel/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "四股名 (名前):"

[node name="NameEdit" type="LineEdit" parent="Panel/CenterContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "若葉山"
alignment = 1

[node name="LabelAge" type="Label" parent="Panel/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "年齢:"

[node name="AgeSpin" type="SpinBox" parent="Panel/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
min_value = 15.0
max_value = 25.0
value = 18.0
alignment = 1

[node name="StartButton" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "ゲーム開始"
